; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/pae/extr_ieee802_1x_cp.c_ieee802_1x_cp_sm_deinit.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/pae/extr_ieee802_1x_cp.c_ieee802_1x_cp_sm_deinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee802_1x_cp_sm = type { %struct.ieee802_1x_cp_sm*, %struct.ieee802_1x_cp_sm* }

@MSG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"CP: state machine removed\00", align 1
@ieee802_1x_cp_retire_when_timeout = common dso_local global i32 0, align 4
@ieee802_1x_cp_transmit_when_timeout = common dso_local global i32 0, align 4
@ieee802_1x_cp_step_cb = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ieee802_1x_cp_sm_deinit(%struct.ieee802_1x_cp_sm* %0) #0 {
  %2 = alloca %struct.ieee802_1x_cp_sm*, align 8
  store %struct.ieee802_1x_cp_sm* %0, %struct.ieee802_1x_cp_sm** %2, align 8
  %3 = load i32, i32* @MSG_DEBUG, align 4
  %4 = call i32 @wpa_printf(i32 %3, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  %5 = load %struct.ieee802_1x_cp_sm*, %struct.ieee802_1x_cp_sm** %2, align 8
  %6 = icmp ne %struct.ieee802_1x_cp_sm* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %28

8:                                                ; preds = %1
  %9 = load i32, i32* @ieee802_1x_cp_retire_when_timeout, align 4
  %10 = load %struct.ieee802_1x_cp_sm*, %struct.ieee802_1x_cp_sm** %2, align 8
  %11 = call i32 @eloop_cancel_timeout(i32 %9, %struct.ieee802_1x_cp_sm* %10, i32* null)
  %12 = load i32, i32* @ieee802_1x_cp_transmit_when_timeout, align 4
  %13 = load %struct.ieee802_1x_cp_sm*, %struct.ieee802_1x_cp_sm** %2, align 8
  %14 = call i32 @eloop_cancel_timeout(i32 %12, %struct.ieee802_1x_cp_sm* %13, i32* null)
  %15 = load i32, i32* @ieee802_1x_cp_step_cb, align 4
  %16 = load %struct.ieee802_1x_cp_sm*, %struct.ieee802_1x_cp_sm** %2, align 8
  %17 = call i32 @eloop_cancel_timeout(i32 %15, %struct.ieee802_1x_cp_sm* %16, i32* null)
  %18 = load %struct.ieee802_1x_cp_sm*, %struct.ieee802_1x_cp_sm** %2, align 8
  %19 = getelementptr inbounds %struct.ieee802_1x_cp_sm, %struct.ieee802_1x_cp_sm* %18, i32 0, i32 1
  %20 = load %struct.ieee802_1x_cp_sm*, %struct.ieee802_1x_cp_sm** %19, align 8
  %21 = call i32 @os_free(%struct.ieee802_1x_cp_sm* %20)
  %22 = load %struct.ieee802_1x_cp_sm*, %struct.ieee802_1x_cp_sm** %2, align 8
  %23 = getelementptr inbounds %struct.ieee802_1x_cp_sm, %struct.ieee802_1x_cp_sm* %22, i32 0, i32 0
  %24 = load %struct.ieee802_1x_cp_sm*, %struct.ieee802_1x_cp_sm** %23, align 8
  %25 = call i32 @os_free(%struct.ieee802_1x_cp_sm* %24)
  %26 = load %struct.ieee802_1x_cp_sm*, %struct.ieee802_1x_cp_sm** %2, align 8
  %27 = call i32 @os_free(%struct.ieee802_1x_cp_sm* %26)
  br label %28

28:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @wpa_printf(i32, i8*) #1

declare dso_local i32 @eloop_cancel_timeout(i32, %struct.ieee802_1x_cp_sm*, i32*) #1

declare dso_local i32 @os_free(%struct.ieee802_1x_cp_sm*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
